/*
Copyright 2019-present Open Networking Foundation.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package onos.e2t.sim.e2;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

message StartSubscriptionRequest {
    string subscription_id = 1;
    string node_id = 2;
    string cell_object_id = 3;
    uint32 report_period = 4;
    uint32 granularity = 5;
}

message StartSubscriptionResponse {

}

message StopSubscriptionRequest {
    string subscription_id = 1;
    string node_id = 2;
}

message StopSubscriptionResponse {

}

// SimService is an E2 simulator service
service SimService {
    rpc StartSubscription (StartSubscriptionRequest) returns (StartSubscriptionResponse);
    rpc StopSubscription (StopSubscriptionRequest) returns (StopSubscriptionResponse);
}
